[project]
name = "osint-toolkit"
version = "0.5.0"
description = "Best-in-class OSINT toolkit: name + email + username + domain recon across 120+ sources with async fan-out, retry-on-429, cross-source correlation, and 3-mode runtime gating."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Levtheswag" }]
keywords = ["osint", "intelligence", "recon", "sherlock", "holehe", "footprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "dnspython>=2.6.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.3.0",
    "tldextract>=5.1.0",
    "pyfiglet>=1.0.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
osint = "osint_toolkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_toolkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "E501"]  # allow asserts in tests; line-length is advisory only

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
